fix(css): avoid overflow of logos on PDFs

--- a/app/javascript/stylesheets/pdf.scss
+++ b/app/javascript/stylesheets/pdf.scss
@@ -89,6 +89,11 @@ u {
 
   div {
     display: inline-block;
+
+    img {
+      max-width: 350px;
+    }
+
     &:last-child {
       margin-right: 0px !important;
     }
